--- a/final_project/templates/index.html
+++ b/final_project/templates/index.html
@@ -4,11 +4,11 @@
 
 <h3>Hello world :)</h3>
     <p>
-        This is a web page app '<a href="https://translate.google.com/#view=home&op=translate&sl=la&tl=en&text=verbum%20disco" target="_blank">Verbum Disco</a>', which may help you to learn new vocabulary.
+        This is a web page app '<a href="https://translate.google.com/#view=home&op=translate&sl=la&tl=en&text=verbum%20disco" target="_blank" title="Google translator">Verbum Disco</a>', which may help you to learn new vocabulary.
         <br>The app is based on a 
-        <a href="https://en.wikipedia.org/wiki/Python_(programming_language)" target="_blank">Python</a> 
+        <a href="https://en.wikipedia.org/wiki/Python_(programming_language)" target="_blank" title="Wikipedia">Python</a> 
         programming language and 
-        <a href="https://en.wikipedia.org/wiki/Flask_(web_framework)" target="_blank">Flask</a> web framework.
+        <a href="https://en.wikipedia.org/wiki/Flask_(web_framework)" target="_blank" title="Wikipedia">Flask</a> web framework.
         <br>
         <br>
         For what you want to do, choose from the navigation bar above.
