--- a/final_project/templates/upload_completed.html
+++ b/final_project/templates/upload_completed.html
@@ -4,7 +4,7 @@
 
     <h3>Upload completed.</h3>
     <p>
-        Now, you can start tha game here: <a href="{{ url_for('play') }}">PLAY</a>
+        Now, you can start the game here: <a href="{{ url_for('play') }}">PLAY</a>
     </p>
 
 {% endblock %}
