htmls slightly updated

--- a/final_project/templates/template.html
+++ b/final_project/templates/template.html
@@ -3,12 +3,12 @@
 
 {% block navbar %}
 
-<nav class=".nav">
-    <ul class="nav nav-pills">
+<nav class=".nav"><font size="4">
+    <ul class="nav nav-pills"> 
         <li role="presentation"><a href="{{ url_for('index') }}">Home</a></li>
         <li role="presentation"><a href="{{ url_for('how_to') }}">See HOW-TO</a></li>
         <li role="presentation"><a href="{{ url_for('game_web') }}">Verbum Disco game</a></li>
-      </ul>
-  </nav>
+      </ul></font>
+</nav>
 
 {% endblock %}
